...
      print(
        "!!! ERRO DE LOGIN (FirebaseAuthException): Código: ${e.code}, Mensagem: ${e.message}",
      );
      if (e.code == 'user-not-found' ||
          e.code == 'wrong-password' ||
          e.code == 'invalid-credential') {
        errorMessage.value = 'Email ou senha inválidos.';
      } else {
        errorMessage.value = 'Ocorreu um erro ao fazer login.';
      }
    } catch (e) {
      print("!!! ERRO DE LOGIN (Exceção Genérica): ${e.toString()}");
      errorMessage.value = 'Ocorreu um erro inesperado.';
...
